--- a/_config.yml
+++ b/_config.yml
@@ -79,3 +79,23 @@ defaults:
       author_profile: true
       share: true
       read_time: false
+
+#===========================================================
+# NAVIGATION
+#===========================================================
+
+masthead_links:
+  - title: "الرئيسية"
+    url: /
+  - title: "دفتر الخواطر"
+    url: /thoughts/
+  - title: "مقالات ورؤى"
+    url: /articles/
+  - title: "مساحة الترفيه"
+    url: /pause-detente/
+  - title: "دفتر القراء"
+    url: /cahier-des-lecteurs/
+  - title: "أدوات مجانية"
+    url: /ressources-gratuites/
+  - title: "عني"
+    url: /about/
