--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 #===========================================================
 
 locale: "ar"
-title: "حِبر شفاف"
-description: "مدونة شخصية للتعبير عن الخواطر، التأملات، ومشاركة الرؤى حول الحياة وتطوير الذات."
+title: "حبر شفاف" # تم التغيير هنا
+description: "مساحة للكتابة الصادقة، الأفكار الواضحة، والتأملات التي تعبر عن الذات." # تم تغيير الوصف هنا
 url: "https://djameldidin.github.io"
-baseurl: "/daftar-khawater"
-repository: "djameldidin/daftar-khawater"
+baseurl: "/daftar-khawater" # سنناقش تغيير هذا لاحقًا
+repository: "djameldidin/daftar-khawater" # وهذا أيضًا
 
 #===========================================================
 # THEME SETTINGS
@@ -84,7 +84,7 @@ defaults:
       read_time: false
   - scope:
       path: ""
-      type: "life_stories" # القسم الجديد
+      type: "life_stories"
     values:
       layout: single
       author_profile: true
@@ -94,11 +94,7 @@ defaults:
 #===========================================================
 # NAVIGATION
 #===========================================================
-
-#===========================================================
-# NAVIGATION
-#===========================================================
-
+    
 masthead_links:
   - title: "الرئيسية"
     url: /
