--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,1 +1,17 @@
-
+main:
+  - title: "الرئيسية"
+    url: /
+  - title: "الخواطر"
+    url: /thoughts/
+  - title: "مقالات ورؤى"
+    url: /articles/
+  - title: "قصص من الحياة"
+    url: /life-stories/
+  - title: "مساحة الترفيه"
+    url: /pause-detente/
+  - title: "دفتر القراء"
+    url: /cahir-des-lecteurs/
+  - title: "أدوات مجانية"
+    url: /ressources-gratuites/
+  - title: "عني"
+    url: /about/
