--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
   - title: "مساحة الترفيه"
     url: /pause-detente/
   - title: "دفتر القراء"
-    url: /cahir-des-lecteurs/
+    url: /cahier-des-lecteurs/
   - title: "أدوات مجانية"
     url: /ressources-gratuites/
   - title: "عني"
