--- a/_config.yml
+++ b/_config.yml
@@ -88,6 +88,7 @@ defaults:
       author_profile: true
       share: true
       read_time: true
+      comments: true
   - scope:
       path: ""
       type: "thoughts"
@@ -96,6 +97,7 @@ defaults:
       author_profile: true
       share: true
       read_time: false
+      comments: true
   - scope:
       path: ""
       type: "life_stories"
@@ -104,6 +106,7 @@ defaults:
       author_profile: true
       share: true
       read_time: true
+      comments: true
 version: "{{ site.time | date: '%s' }}"
 # في أي مكان من ملف _config.yml
 include:
