--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,34 +1,3 @@
-- title: "🏠 الرئيسية"
-  url: ""
-
-- title: "📂 المقالات"
-  url: "/articles/"
-
-- title: "🖋️ خواطر"
-  url: "/thoughts/"
-
-- title: "📚 دفتر القراء"
-  url: "/cahier-des-lecteurs/"
-  children:
-    - title: "💌 رسائل القراء"
-      url: "/messages-des-lecteurs/"
-    - title: "✍️ مساحة صامتة"
-      url: "/espace-silencieux/"
-    - title: "✨ سؤال الشهر"
-      url: "/question-du-mois/"
-
-- title: "📖 قصص من الحياة"
-  url: "/life-stories/"
-
-- title: "🎈 مساحة الترفيه"
-  url: "/pause-detente/"
-
-- title: "🎁 أدوات مجانية"
-  url: "/ressources-gratuites/"
-
-- title: "👤 عني"
-  url: "/about/"
-
 - title: "<span class='icon-only-mobile'>🏠</span> الرئيسية  "
   url: "/"
 
@@ -38,8 +7,15 @@
 - title: "<span class='icon-only-mobile'>🖋️</span> خواطر "
   url: "/thoughts/"
 
-- title: "<span class='icon-only-mobile'>📚</span>  مدفتر القراء"
+- title: "<span class='icon-only-mobile'>📚</span>  دفتر القراء"
   url: "/cahier-des-lecteurs/"
+  children: 
+    - title: "💌 رسائل القراء"
+      url: "/messages-des-lecteurs/"
+    - title: "✍️ مساحة صامتة"
+      url: "/espace-silencieux/"
+    - title: "✨ سؤال الشهر"
+      url: "/question-du-mois/"
 
 - title: "<span class='icon-only-mobile'>📖</span> قصص من الحياة"
   url: "/life-stories/"
