Fix desktop and mobile navigation

--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,15 @@ collections:
   life_stories:
     output: true
     permalink: /life-stories/:path/
+  messages_des_lecteurs:
+    output: true
+    permalink: /messages-des-lecteurs/:title/
+  espace_silencieux:
+    output: true
+    permalink: /espace-silencieux/:title/
+  question_du_mois:
+    output: true
+    permalink: /question-du-mois/:title/
 
 #===========================================================
 # PLUGINS & DEFAULTS
